--- a/MatchGame/Packages/manifest.json
+++ b/MatchGame/Packages/manifest.json
@@ -10,6 +10,8 @@
     "com.unity.inputsystem": "1.11.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.muse.chat": "1.1.1-pre.3",
+    "com.unity.muse.sprite": "1.1.1",
+    "com.unity.recorder": "5.1.2",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
